Did these changes :  * Fixed #3  * Made the options go invisible in place of not being rendered    this solved the problem of typing area shifting top to accomodate    the missing Options div.

--- a/src/App.css
+++ b/src/App.css
@@ -90,3 +90,8 @@ div#next-test-button-container{
   color :rgb(12, 13, 13);
   background-color: #e1dada;
 }
+
+.invisible{
+  opacity: 0!important;
+  pointer-events: none!important;
+}
